syntax="proto3";

package search.v1;
option go_package="search/v1;searchV1";

// SyncService 在体量大的情况下，这个接口可以考虑进一步细分
// 也就是细分为 UserSyncService 和 ArticleSyncService
service SyncService {
  rpc InputUser (InputUserRequest) returns (InputUserResponse);
  rpc InputArticle (InputArticleRequest) returns (InputArticleResponse);
  rpc InputAny (InputAnyRequest) returns (InputAnyResponse);
}

message User {
  int64 id = 1;
  string email = 2;
  string nickname = 3;
  string phone = 4;
}

message Article {
  int64 id = 1;
  string title = 2;
  int32 status = 3;
  string content = 4;
  repeated string tags = 5;
}

message InputUserRequest {
  User user = 1;
}

message InputUserResponse {

}

message InputArticleRequest {
  Article article = 1;
}

message InputArticleResponse {

}

message InputAnyRequest {
  string index_name = 1;
  string doc_id = 2;
  string data = 3;
}

message InputAnyResponse {

}